Add logging subsystem support

--- a/src/esp/core/CMakeLists.txt
+++ b/src/esp/core/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(
   Configuration.h
   esp.cpp
   esp.h
+  logging.cpp
   logging.h
   managedContainers/AbstractManagedObject.h
   managedContainers/ManagedContainer.h
@@ -62,3 +63,7 @@ target_link_libraries(
 )
 
 target_include_directories(core PUBLIC ${PROJECT_BINARY_DIR})
+
+if(BUILD_TEST)
+  add_subdirectory(test)
+endif()
